[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Karen/Angry Karen 1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Karen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Karen/Angry Karen 2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Karen/Angry Karen 3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Karen/Karen 1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Karen/Karen 2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Karen/Karen 3.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Angry",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 136.519

[sub_resource type="CircleShape2D" id=3]
radius = 38.2766

[node name="Karen" type="KinematicBody2D"]
position = Vector2( -0.0901959, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Walking"
frame = 1

[node name="Radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radius"]
shape = SubResource( 2 )

[node name="Speech" type="Label" parent="."]
margin_left = -81.0
margin_top = -59.0
margin_right = 73.0
margin_bottom = -42.0
rect_scale = Vector2( 1.2, 1.2 )
custom_colors/font_color = Color( 0.956863, 0.0431373, 0.0431373, 1 )
text = "Where's the manager!?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -38.6305, 20.1447, -46.2227, -6.20461, -17.6404, -6.20461, -10.4949, -22.7287, -4.24249, -41.0392, 19.4272, -40.1461, 27.9126, -17.3696, 21.2136, 22.3777 )

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( -4.09698, -4.55221 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Radius" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Radius" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
[connection signal="body_exited" from="Body" to="." method="_on_Body_body_exited"]
